Added "view more ATARC guides"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
     <div class="container">
       <header role="banner">
         <div class="wrap">
+          <p><a href="https://atarc-example.github.io/ATARC-demo/">View more ATARC products</a></p>
           {% if site.logourl != null %}
             <img class="logo" src="{{ site.logourl }}" alt="{{ site.logoalt }}">
           {% endif %}
