Edited to be in line with carlton's changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,8 @@
         <div class="wrap">
           <p>This project is maintained by <a href="{{ site.author.url }}">{{ site.author.name }}</a>.</p>
           <p><a href="http://github.com/ATARC-Example/Product-A/edit/master/{{page.path}}">Edit this page</a></p>
+          <p><a href="http://github.com/ATARC-Example/Product-A">View README</a></p>
+          <p><a href="https://github.com/ATARC-Example/Product-A/new/master/_pages">Add new page</a></p>
         </div><!--/.wrap -->
       </footer>
     </div> <!-- /.container -->
